<resources>
    <string name="app_name">Youkraine</string>
    <string name="example_autocompletetextview" translatable="false">Example showing AutoCompleteTextView</string>
    <string name="link_EducationDiplomPDFApp" translatable="false">https://ufm.dk/en/education/recognition-and-transparency/get-assessment/form-standard/pdf-application</string>
    <string name="link_EducationOptions" translatable="false">https://ufm.dk/en/refugees-from-ukraine-welcome/higher-education-options-in-denmark-if-you-are-a-refugee-from-ukraine</string>
    <string name="link_EducationSUInfo" translatable="false">https://www.su.dk/english/</string>
    <string name="link_EducationSUConditions" translatable="false">https://www.su.dk/english/su-as-a-foreign-citizen/equal-status-according-to-danish-rules/you-fall-within-section-2-2-or-3-of-the-act-on-integration-of-aliens-in-denmark/</string>
    <string-array name="RegionSpinner_values">
        <item>Midtjylland</item>
        <item>Nordjylland</item>
        <item>Syddanmark</item>
        <item>Sjælland</item>
        <item>Hovedstaden</item>
    </string-array>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_landing" translatable="false">LandingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="how_do_i_buy_tickets">HOW DO I BUY TICKETS</string>
    <string name="the_danish_electronic_ticket_less_travel_card_system">THE DANISH ELECTRONIC TICKET-LESS TRAVEL CARD SYSTEM</string>
    <string name="cash_card">CASH/CARD</string>
    <string name="how_do_you_pay_with_the_app">HOW DO YOU PAY WITH THE APP?</string>
    <string name="what_can_you_do_with_the_app">WHAT CAN YOU DO WITH THE APP?</string>
    <string name="midttrafik_app">MIDTTRAFIK APP</string>
    <string name="applications_for_planning_and_ordering_tickets">APPLICATIONS FOR PLANNING AND ORDERING TICKETS</string>
    <string name="applications">APPLICATIONS</string>
    <string name="get_travel_card">GET TRAVEL CARD</string>
    <string name="how_do_i_top_up_my_travel_card">HOW DO I TOP UP MY TRAVEL CARD?</string>
    <string name="how_do_i_use_my_travel_card">HOW DO I USE MY TRAVEL CARD</string>
    <string name="which_card_is_right_for_me">WHICH CARD IS RIGHT FOR ME?</string>
    <string name="the_danish_electronic_ticket_less_tavel_card_system">THE DANISH ELECTRONIC TICKET-LESS TAVEL CARD SYSTEM</string>
    <string name="travel_card">(TRAVEL CARD)</string>
    <string name="rejsekort">REJSEKORT</string>
    <string name="the_following_are_the_different_payment_options_for_travelling_with_bus_in_denmark">THE FOLLOWING ARE THE DIFFERENT PAYMENT OPTIONS FOR TRAVELLING WITH BUS IN DENMARK</string>
    <string name="select_your_region">SELECT YOUR REGION</string>
    <string name="the_following_are_the_different_payment_options_for_travelling_with_train_in_denmark">THE FOLLOWING ARE THE DIFFERENT PAYMENT OPTIONS FOR TRAVELLING WITH TRAIN IN DENMARK</string>
    <string name="dsb_app">DSB APP</string>
    <string name="what_can_you_do_with_the_app_DSB">WHAT CAN YOU DO WITH THE APP?</string>
    <string name="how_do_you_pay_with_the_app_DSB">HOW DO YOU PAY WITH THE APP?</string>
    <string name="Bus_which_card_is_right_for_me_MESSAGE">"There is a wide selection of Rejsekort cards that you can choose from depending on your needs.  Rejsekort.dk has a guide that can help you choose the correct Rejsekort based on a few questions. Most will only require the regular Rejsekort, but if you are young, and are travelling regularly from one place to another, studying etc. there may be better options for you!  The Rejsekort test can help you choose which card is right for you.   Click “GO TO” to be redirected to the page "</string>
    <string name="Bus_how_do_i_use_my_travel_card_MESSAGE">With a Rejsekort, you must begin all journeys by checking in through check-in card readers, which are placed inside the buses. If you change the means of transportation during your journey, you must remember to check in again. \n\nAt the end of your journey, you must check out through a check-out card reader. \n\nFor more information click “GO TO” to be redirected to the page</string>
    <string name="Bus_how_do_i_top_up_my_travel_card_MESSAGE">You can top up your Rejsekort either by making a top up agreement, which automatically deposits money to your card either at a specified time or when your balance is below a specified amount, or you can manually deposit money onto your card. This can be done at the Rejsekort self-service webpage, or by visiting a physical Rejsekort self-service machine at most big stations and various public areas. Please note that if you use the webpage it can take up to 24 hours for your funds to become available on your card, whereas if you deposit money at the physical machines, it is instant. \n\nFor more information click “GO TO” to be redirected to the page</string>
    <string name="BUS_get_travel_card_MESSAGE">Click "GO TO" to be redirected to the Rejsekort.dk website to order a travel card</string>
    <string name="what_is_midttrafik">What is Midttrafik?</string>
    <string name="what_is_midttrafik_MESSAGE">"Every Danish region has their own traffic company with their own traffic app. The Midttrafik app is your regional travel app for the Midtjylland region and can be used to plan travels within the region.   For more information, click GO TO.  "</string>
    <string name="what_can_you_do_with_the_app_Midttrafik_MESSAGE">"You can pay for your travel and look up your journey via the Journey Planner (Rejseplanen) to help plan your trip. This will provide you with an overview of arrivals and departures of the transport options suitable for your route.   You can also download Midttrafik live, where you can “trace” busses in real time.  "</string>
    <string name="how_do_you_pay_with_the_app_Midttrafik_MESSAGE">You can pay either by card or with Mobilepay (Danish mobile phone transaction app).</string>
    <string name="how_do_i_buy_tickets_Midttrafik_MESSAGE">You can pay by cash (not card) at the bus chauffeur to purchase a ticket. This is only for buses - for paying with card or cash at trains, see the train section in the app.   An overview if prices can be found at Midttrafik\'s website.</string>
    <string name="Dialog_go_to">Go to</string>
    <string name="Dialog_cancel">Cancel</string>
    <string name="educationHomeToolbarText">Education</string>
    <string name="educationHomeBold1">Diplom verification</string>
    <string name="educationHomeBold2">Education options</string>
    <string name="educationHomeBold3">SU</string>
    <string name="educationHomeText1">Here is information for you If you are a refugee from Ukraine since 24th of February and consider studying in Denmark.  On this page you can get information about:</string>
    <string name="educationHomeText2">how and if you can verify your current education</string>
    <string name="educationHomeText3">what are your options for studying in Denmark</string>
    <string name="educationHomeText4">how to check if you can receive SU while studying in Denmark</string>
    <string name="educationHomeBtn1">Diplom verification</string>
    <string name="educationHomeBtn2">Education Options</string>
    <string name="educationHomeBtn3">SU</string>
    <string name="educationDiplomToolbarText">Diplom verification</string>
    <string name="educationDiplomBold1">Online application:</string>
    <string name="educationDiplomBold2">PDF application form:</string>
    <string name="educationDiplomText1">You can varify your diplom to be able to study or work in Denmark within your profession.  Your assessment can be applied either online or in PDF format.</string>
    <string name="educationDiplomBtn1">What are the the required document to be included in the application?</string>
    <string name="educationDiplomBtn2">How do I fill in the online application?</string>
    <string name="educationDiplomBtn3">How do I fill in the PDF application?</string>
    <string name="educationOptionsToolbarText">Education options</string>
    <string name="educationOptionsText1">You can continue studying your higher education programme in Denmark or begin a new higher education in Denmark.  To do this you can:</string>
    <string name="educationOptionsText2">1. apply for a transfer from your Ukrainian higher education programme to a Danish higher education programme or</string>
    <string name="educationOptionsText3">2. apply for admission to a new full time higher education programme in Denmark.</string>
    <string name="educationSUToolbarText" translatable="false">SU</string>
    <string name="educationSUBold1">What is SU and SU-loan?</string>
    <string name="educationSUBold2">How do I apply for SU or SU-loan?</string>
    <string name="educationSUBold3">Speical conditions for Ukrainian refugees</string>
    <string name="educationSUText1">“SU” and “SU-loan” is State Educational Grant and Loan Scheme. Society lends students a helping hand in covering living costs for a great variety of courses and studies.</string>
    <string name="educationSUText2">If you want to apply for SU or a SU-loan, you must apply for SU in minSU. Log on to minSU from a computer insted af a mobile device - they do not recieve all applications completed via a mobile device. For this you need to log in with your MitID.   If you are not sure how to use MitID, check out the page within the Essentials category, or click this button:</string>
    <string name="educationSUText3">More information here:</string>
    <string name="educationSUText4">If you are a refugee from Ukraine, you may apply for equal status with Danish citizens, if you fall within Section 2(2) of the Act on Integration of Aliens in Denmark:</string>
    <string name="educationSUBtn1">Go to MitID</string>
    <string name="educationSUBtn2">How do I apply for SU as a Ukrainian refugee?</string>
    <string name="e_mail">E-MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="register">Register</string>
    <string name="full_name">FULL NAME</string>
    <string name="municipality">MUNICIPALITY</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="edit_what_you_want_to_change">Edit what you want to change</string>
    <string name="eboksTitle">E-Boks</string>
    <string name="eboksSubtitle1">What is E-Boks?</string>
    <string name="eboksContent1">E-Boks is the most widely used digital mailbox in Denmark. Here you will receive e-mail from public authorities, your bank, insurance company and much more.</string>
    <string name="eboksContent2">For more information visit the E-Boks website:</string>
    <string name="eboksLink1">https://www.nemkonto.dk/da/Servicemenu/Engelsk</string>
    <string name="eboksSubtitle2">How do I get an E-Boks?</string>
    <string name="eboksContent3">In order to get an E-Boks, you should do one of two things.</string>
    <string name="eboksContent4">• Go to Borger Service, where you can receive help.</string>
    <string name="eboksContent5">• If you have a MitID, you can simply go to this page and sign up:</string>
    <string name="eboksSubtitle3">How do I use E-Boks?</string>
    <string name="eboksContent6">In order to use E-Boks you can login on their website or for convinience, you can download the E-Boks application on your phone.</string>
</resources>