<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".EducationSUActivity">

    <include layout="@layout/appbar"
        android:id="@+id/my_toolbar"/>

    <TextView
        android:id="@+id/textViewEducationSU"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/educationSUToolbarText"
        android:textSize="45sp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        app:layout_constraintEnd_toStartOf="@id/scrollViewEducationDiplom"
        app:layout_constraintEnd_toEndOf="parent" />


    <ScrollView
        android:id="@+id/scrollViewEducationSU"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:paddingTop="20dp"
        android:background="@color/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/EducationSU"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/contentBox"
            android:orientation="vertical"
            android:padding="20dp"
            android:paddingLeft="32dp"
            android:paddingTop="20dp"
            android:paddingRight="32dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/EducationSUText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:text="@string/educationSUBold1"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/EducationSUText1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/educationSUText1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black"/>


            <TextView
                android:id="@+id/EducationSUText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:text="@string/educationSUBold2"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/EducationSUText3.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="15dp"
                android:text="@string/educationSUText2"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonEducationSU"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/educationSUBtn1"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:textAlignment="center"
                android:textColor="@color/buttonBlueText"/>


            <TextView
                android:id="@+id/EducationSUText1.4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textAlignment="center"
                android:text="@string/educationSUText3"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/EducationSUText1.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textAlignment="center"
                android:textStyle="italic"
                android:text="@string/link_EducationSUInfo"
                android:autoLink="all"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/EducationSUText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:text="@string/educationSUBold3"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/EducationSUText2.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/educationSUText4"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonEducationSU2"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:text="@string/educationSUBtn2"
                android:textAlignment="center"
                android:textSize="10sp"
                android:textColor="@color/buttonBlueText" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>