<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:background="@color/contentBox"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/appbarRegister"
        layout="@layout/appbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="246dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="245dp"
        android:background="@color/contentBox"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/registerLinearLayout"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <AutoCompleteTextView
            android:id="@+id/citiesAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/municipality"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/registerButton"
            style="@style/WhiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="auto"
            android:text="@string/register" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>