<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentBox"
    tools:context=".EditProfile">
    <include layout="@layout/appbar"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="246dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="245dp"
        android:background="@color/contentBox"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">




<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/edit_what_you_want_to_change"/>

        <EditText
            android:id="@+id/editTextUserFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <AutoCompleteTextView
            android:id="@+id/citiesUserAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/municipality"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/editProfileUserButton"
            style="@style/WhiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="auto"
            android:text="@string/edit_profile" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>