<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context=".EBoksPage">

    <include layout="@layout/appbar"
        android:id="@+id/appbarEBoks"/>

    <TextView
        android:id="@+id/title_EBoks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/eboksTitle"
        android:textSize="45dp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/appbarEBoks"
        app:layout_constraintEnd_toStartOf="@id/contentLayout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@id/title_EBoks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/EBoks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/contentBox"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subtitle_WhatIs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/eboksSubtitle1"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/subsequent_textWhatIs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/eboksContent1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/eboksContent2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:autoLink="all"
                    android:text="@string/eboksLink1"/>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subtitle_HowGet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/eboksSubtitle2"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/eboksContent3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/eboksContent4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/eboksContent5"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subtitle_HowToUse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/eboksSubtitle3"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <TableRow>
                        <!-- First Column with TextView -->
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:text="@string/eboksContent6"/>

                        <!-- Second Column with ImageButtons -->

                        <TableLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TableRow
                                android:layout_weight="0.5">

                                <ImageButton
                                    android:id="@+id/googleStoreButtonEBoks"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:scaleType="centerInside"
                                    android:layout_weight="1"
                                    android:src="@drawable/getongoogleplaystore" />
                            </TableRow>

                            <TableRow
                                android:layout_weight="0.5">
                                <ImageButton
                                    android:id="@+id/appleStoreButtonEBoks"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:scaleType="centerInside"
                                    android:src="@drawable/getonapplestore" />
                            </TableRow>

                        </TableLayout>

                    </TableRow>

                </TableLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>